--- a/imports/ui/StatsTable.css
+++ b/imports/ui/StatsTable.css
@@ -1,9 +1,9 @@
 
 
-.griddle > *::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
 	background-color: #BEA7A7;
 }
-html > *::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	width: 12px;
 	background-color: transparent;
 }
@@ -19,28 +19,55 @@ html > *::-webkit-scrollbar {
 
 }
 
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+
+.example-appear {
+  opacity: 0.01;
+}
+
+.example-appear.example-appear-active {
+  opacity: 1;
+  transition: opacity .5s ease-in;
+}
 .griddle .top-section{
   clear:both;
   display:table;
   width:100%;
 }
-
+/*
 .griddle .griddle-filter input{
 	font-family: 'Raleway', sans-serif;
 	font-size: 0.5em;
 	background-color: transparent;
 	border-bottom: #b6d7e3 0.2em solid;
+	border-bottom: none;
 	border-top: none;
 	border-right: none;
 	border-left: none;
 	color: #b6d7e3;
 	margin: 0em;
 	padding: 0em;
-}
+}*/
 
 .griddle .griddle-settings-toggle{
   float:left;
-  width:50%;
+  width:100%;
   text-align:right;
 }
 
@@ -57,6 +84,16 @@ html > *::-webkit-scrollbar {
   margin-bottom:10px;
 }
 
+.settings {
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+  font-family: 'Raleway', sans-serif;
+	font-variant: small-caps;
+	font-style: italic;
+	font-weight: 800;
+	font-size: .8em;
+}
 .griddle .griddle-settings .griddle-column-selection{
   float:left;
   width:20%;
@@ -72,11 +109,10 @@ html > *::-webkit-scrollbar {
 	margin: 0px;
 	padding: 0px;
 }
+
 .griddle th{
 	border-spacing: 5px;
-	border-radius: 1px;
-	padding: .5em;
-	background-color: #413D45;
+	background-color: rgba(65, 61, 69, 0.8);
 	font-variant: small-caps;
 	font-style: italic;
 	font-weight: 300;
@@ -84,11 +120,10 @@ html > *::-webkit-scrollbar {
 	color: #D6C0BA;
 }
 
-
 .griddle td{
 	font-size: .9em;
   padding: .5em;
-  border-bottom: .1em solid #413D45;
+  border-bottom: .1em solid rgba(65, 61, 69, 0.3);
   height:100%;
 }
 
