--- a/imports/ui/StatsTable.css
+++ b/imports/ui/StatsTable.css
@@ -9,9 +9,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-	/*border-right: thin solid #D6C0BA;*/
-	/*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);*/
-	background-color: #413D45;
+	background-color: #5b5258;
 }
 
 
@@ -19,32 +17,6 @@
 
 }
 
-.example-enter {
-  opacity: 0.01;
-}
-
-.example-enter.example-enter-active {
-  opacity: 1;
-  transition: opacity 500ms ease-in;
-}
-
-.example-leave {
-  opacity: 1;
-}
-
-.example-leave.example-leave-active {
-  opacity: 0.01;
-  transition: opacity 300ms ease-in;
-}
-
-.example-appear {
-  opacity: 0.01;
-}
-
-.example-appear.example-appear-active {
-  opacity: 1;
-  transition: opacity .5s ease-in;
-}
 .griddle .top-section{
   clear:both;
   display:table;
@@ -55,12 +27,12 @@
 	font-family: 'Raleway', sans-serif;
 	font-size: 0.5em;
 	background-color: transparent;
-	border-bottom: #b6d7e3 0.2em solid;
+	border-bottom: #95DBE5 0.2em solid;
 	border-bottom: none;
 	border-top: none;
 	border-right: none;
 	border-left: none;
-	color: #b6d7e3;
+	color: #95DBE5;
 	margin: 0em;
 	padding: 0em;
 }*/
@@ -111,8 +83,9 @@
 }
 
 .griddle th{
+	padding: 0px;
 	border-spacing: 5px;
-	background-color: rgba(65, 61, 69, 0.8);
+	background-color: #5b5258;
 	font-variant: small-caps;
 	font-style: italic;
 	font-weight: 300;
@@ -123,7 +96,7 @@
 .griddle td{
 	font-size: .9em;
   padding: .5em;
-  border-bottom: .1em solid rgba(65, 61, 69, 0.3);
+  border-bottom: .1em solid #867982;
   height:100%;
 }
 
